# Segmentacion

./: README.md
proyecto/: CMakeLists.txt  fase1.cpp  meanShiftSegmentation.cpp  out  p  respaldo.cpp  respaldoSegmentacion.cpp
